Update on Overleaf.

--- a/ExSummary.tex
+++ b/ExSummary.tex
@@ -33,40 +33,23 @@ The results from the EMEP MSC-W model simulations and the observations show gene
 
 A lot of rain in November-December combined with the mild winter temperatures resulted in the absence of major PM episodes in 2019 typical for Europe in winters. Model results and EMEP observational sites show that the annual mean regional background \PM[10] concentrations were below the EU limit value of 40 \ug for all of Europe in 2019. The model calculates annual mean \PM[10] above the WHO recommended Air Quality Guideline (AQG) of 20 \ug for only small regions in the Po Valley and western Turkey. The highest observed annual mean \PM[10], exceeding the AQG of 20 \ug, were only registered at two Slovakian and one Greek site. Further, the joint model and observational results show that annual mean regional background \PM[2.5] concentrations in 2019 were below the EU limit value of 25 \ug (except in the Po Valley according to the model). However, there were observed cases of exceedance of the WHO AQG value of 10 \ug at nine sites.
 %, with the highest values at the Hungarian site HU0004 with 16 \ug, followed by German DE0044 with 14 \ug and Italian IT0004 with 13 \ug. 
-Overall, considerable fewer days with PM exceedances have been observed and modelled for EMEP sites for 2019. \PM[10] daily concentrations in excess of 50 \ug were observed at 31 out of 67 sites in 2019, but no violations of the \PM[10] EU limit value (more than 35 exceedance days) were registered. Still, 12 sites had more than 3 exceedance days recommended by WHO AQG’s %(with the highest number of observed exceedance days being 7 at DE0001 and 6 at LV0010 and RS0005). 
+Overall, considerable fewer days with PM exceedances have been observed and modelled for EMEP sites for 2019. \PM[10] daily concentrations in excess of 50 \ug were observed at 31 out of 67 sites in 2019, but no violations of the \PM[10] EU limit value (more than 35 exceedance days) were registered. Still, 12 sites had more than 3 exceedance days recommended by WHO AQG’s. %(with the highest number of observed exceedance days being 7 at DE0001 and 6 at LV0010 and RS0005). 
 Regional background \PM[2.5] concentrations exceeded the WHO AQG recommended limit of 25 \ug at 37 out of 51 stations in 2019. Among those, at 21 sites the number of exceedance days were more than 3 (the recommended limit according to WHO AQG).  %The highest number of exceedance days was 40 at HU0002 and IT0004, followed by 30, 26 and 24 at DE0044, PL0005 and AT0002, respectively. 
 Most of the exceedances registered at the central European sites occurred during the winter and in the spring, while rather few exceedances occurred in the wet autumn of 2019. By contrast, at the Mediterranean sites the exceedances were more frequent during summer. PM exceedances simulated by the EMEP MSC-W model correspond in general quite well with the EMEP observations, with some tendency of underestimating the occurrence of exceedances for Central European sites, while overestimating those for some of the Mediterranean sites heavily influenced by desert dust.
 
 
 
 %PM pollution was rather moderate in 2018, in particular in Central, Western and Southern Europe (10-30\% lower compared to the 18-year average) due to the relatively mild winter and more precipitation. Only in Turkey, the Caucasus region, Ukraine, the Baltic countries and southern parts of Finland and Sweden, \PM[10] and \PM[2.5] levels were higher. 
-%EMEP MSC-W model calculations and EMEP observations show a general increase of annual mean \PM[10] and \PM[2.5] over land from north to south, with concentrations being below 2-5 \ug in Northern
-%Europe and increasing to 5-15 \ug in the mid-latitudes and further south.
-%, with \PM[2.5] levels being somewhat lower than those of \PM[10]. 
-%The distribution of the regional background PM is fairly homogeneous over most of Central and Western Europe, with somewhat elevated \PM[10] levels of 15-20 \ug in the Po Valley and the Benelux. The observations also show elevated \PM[10] concentrations in Poland, Czechia and Hungary, while the model calculates high PM for the regions east of the Caspian Sea and over the southern Mediterranean (heavily influenced by Saharan dust). 
+ 
 
 %There is good agreement between the modelled and observed \PM[10] and \PM[2.5], with annual mean model biases of -22\% and -14\% and correlation coefficients of 0.66 and 0.81, respectively.
 
-%Model results and EMEP observational data show that the annual mean regional background \PM[10] concentrations were below the EU limit value of 40 \ug in Europe in 2018, but some exceedances of the WHO recommended AQG of 20 \ug occurred. 
-%The annual mean \PM[2.5] concentrations in 2018 were below the EU limit value of 25 \ug (except modelled \PM[2.5] for the Po Valley). However, exceedances of the WHO AQG value of 10 \ug by annual mean \PM[2.5] were observed at seventeen sites.%, with the highest values registered in Hungary (16 \ug at HU0003 and 15.5 \ug at HU0002).
 
-%Out of the 62 sites, days with \PM[10] exceedances of 50 \ug were observed at 36, but in all cases with fewer than the upper EU-limit of 35 days per year registered. Still, 18 sites had more than 3 exceedance days (the upper limit recommended by the WHO AQGs). %The highest numbers of days with observed exceedances of \PM[10] were 25 at CY0002 and SK0007, and 17 at CZ0003. 
-%Daily mean \PM[2.5] concentrations exceeded the WHO AQG recommended of value 25 \ug at 31 out of 41 stations in 2018. Among those, at 21 sites the number of exceedance days were more than 3 (the recommended limit according to WHO AQG).  
+
+ 
 %The modelled numbers of exceedance days for 2019 show in general a good correspondence with the observations, with somewhat better agreement for \PM[10] than for \PM[2.5]. The model has a tendency of underestimating the frequency of exceedance days at some Central European sites
 %and overestimating at some Mediterranean sites. 
-%The majority of PM exceedances occurred during the winter and autumn 2018 at Central European sites, whereas during the summer at the Mediterranean sites. Remarkably, the largest number of \PM[2.5] exceedances at three out of four German sites occurred in spring, while much fewer occurred during the cold seasons.
 
-%\QUERY{Something about wet dep, Hilde}
-
-
-%\subsubsection*{The summer of 2018} OLD
-%During April/May-August parts of Europe experienced a persistent heat wave. Northern Europe and in particular the Nordic countries and the UK were most heavily affected, but also central parts of the continent experienced long-lasting heat and drought in summer. The heat and drought affected the atmospheric level of pollutants in many ways. Tropospheric ozone is strongly tied to the meteorological conditions, and hot, sunny and dry weather conditions can lead to increased ozone levels in many ways. 
-
-%The continent experienced a series of ozone episodes during April/May-August. The most pronounced lasted from the last part of July to the first days of August when areas from Southern Italy to Scandinavia were affected and peak values exceeding 100 ppb were seen at several sites. Another marked ozone episode was seen one month earlier, from the end of June to the first week of July, mainly affecting Central Europe.
-
-%Long-term time series of EMEP ozone measurements show a downward trend in the metrics SOMO35 and AOT40 reflecting the reduced emission of precursors, whereas the levels in 2018 were clearly elevated. This is a clear message that an efficient abatement of surface ozone depends on future climate change as well as on the reduction of \nox and VOCs emissions. The high levels of AOT40 in 2018 should, however, not be used directly to assess ozone effects on vegetation. The extreme drought likely reduced the uptake of ozone in the plants, leading to increased near-surface ozone.
-
-%\PM[10] and \PM[2.5] levels in Northern Europe were generally increased all of summer 2018. The increase was mainly attributed to fine (\PM[2.5]) OC (organic carbon) and mineral dust, which formation and emission were governed by the favourable meteorological conditions. Some sites experienced a substantial 250-400 \% increase in the mineral dust loading compared to the  2013-2017 period, with source regions both within and outside of Europe. Isoprene levels were elevated compared to previous years, as were 2-methyltetrols, which are oxidation products of isoprene partitioning to the particulate phase. Unchanged EC levels and reduced BB (biomass burning) and PBAP (primary biological aerosol particles) tracer levels point to BSOA (biogenic secondary organic aerosol) formation as the explanation of the increased level of fine OM in summer 2018.
 
 
 
