--- a/chapterStatus2019.tex
+++ b/chapterStatus2019.tex
@@ -5,7 +5,7 @@
 {\bf{Svetlana Tsyro, Wenche Aas, Sverre Solberg, Anna Benedictow and Hilde Fagerli}}
 \vspace{30pt}
 
-This chapter describes the status of transboundary air pollution in 2019. A short summary of the meteorological conditions for 2019 is presented and the EMEP network of measurements in 2019 is briefly described. Thereafter, the status of air pollution in 2019 is discussed.
+This chapter describes the status of transboundary air pollution in 2019. A short summary of the meteorological conditions is presented, the EMEP network of measurement and the EMEP MSC-W model set up is briefly described. Thereafter, the status of air pollution in 2019 is discussed.
 
 \section{Meteorological conditions in 2019}
 \label{sec:meteo}
