--- a/Titlepage.tex
+++ b/Titlepage.tex
@@ -50,10 +50,10 @@ Date: \today\\
 %\old{TODO}
   \begin{tabular}{m{4.0cm}m{9.5cm}}
     EMEP/MSC-W: &
-    \mbox{Hilde Fagerli, Svetlana Tsyro, Eivind Gr{\o}tting W{\ae}rsted}
+    \mbox{Hilde Fagerli, Svetlana Tsyro, Eivind Gr{\o}tting W{\ae}rsted,}
     \mbox{{\'A}gnes Ny{\'\i}ri, David Simpson, Peter Wind,}
-    \mbox{Anna Benedictow, Heiko Klein, Hans Brenna,}
-    \mbox{Augustin Mortier, Jan Griesfeller}\\
+    \mbox{Anna Benedictow, Heiko Klein, Hans Brenna, Qing Mu,}
+    \mbox{Jonas Gli{\ss}, Augustin Mortier, Jan Griesfeller}\\
  & \\
     EMEP/CCC: &
     \mbox{Wenche Aas, Anne Hjellbrekke, Sverre Solberg,}
